--- a/src/app/app.html
+++ b/src/app/app.html
@@ -30,6 +30,11 @@
                 Corbeille
                 <ion-icon name="arrow-forward" item-right></ion-icon>
             </ion-item>
+            <ion-item color="none" menuClose="" on-click="goToRealTime()" id="menu-list-item33">
+                <ion-icon name="compass" item-left></ion-icon>
+                Real time
+                <ion-icon name="arrow-forward" item-right></ion-icon>
+            </ion-item>
         </ion-list>
         <div class="spacer" style="width:268px;height:23px;" id="menu-spacer2"></div>
         <ion-list id="menu-list7">
