--- a/src/components/maps/maps.html
+++ b/src/components/maps/maps.html
@@ -11,6 +11,9 @@
     <addadress [map]="map" [mapstop]="mapstop" *ngIf="dispalycomponent == 'addadress'">
         <div class="content"></div>
     </addadress>
+    <realtimenav [map]="map" [mapstop]="mapstop" *ngIf="dispalycomponent == 'realtime'">
+        <div class="content"></div>
+    </realtimenav>
 
     <!-- <sendpackage [map]="map"> </sendpackage> -->
     <!-- <pickup [map]="map" [isPinSet]="isMapIdle" [isPickupRequested]="isPickupRequested" [destination]="destination" (updatedPickupLocation)="updatePickupLocation($event)">
