--- a/src/components/realtimenav/realtimenav.html
+++ b/src/components/realtimenav/realtimenav.html
@@ -1,1 +1,4 @@
-<div id="locator1"></div>
+<!-- <div id="locator1"></div> -->
+<!-- <ion-fab class="buttonfab" bottom left>
+    <button ion-fab><ion-icon name="arrow-back"></ion-icon></button>
+</ion-fab> -->
